--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-.header {
+#header {
 	background-color:#4aaaa5;
 	color:#F5F5F5;
 	font-family:'Georgia', Times, 'Times New Roman', serif;
@@ -9,17 +9,45 @@
 	width:250px;
 	padding:40px 10px 10px 40px;
 	clear:left;
+	margin-bottom:0px;
+}
+
+header {
+	border-bottom:3px solid lightgray;
+	border-bottom:100%;
+	margin-bottom:0px;
+}
+
+h1 {
+	font-family:'Georgia', Times, 'Times New Roman', serif;
+	color:#4aaaa5;
+	border-bottom:3px solid lightgray;
+	border-bottom:100%;
+	margin:0px 0px 0px 0px;
+}
+
+h2 {
+	font-family:'Georgia';
+	color:#4aaaa5;
+	border-bottom:3px solid lightgray;
+	border-bottom:100%;
+	padding:5px;
 }
 
 .clearfix {
 	float:left;
 	overflow:auto;
 	clear:left;
-	margin:0px 600px 0px 150px;
-	border: 1px #D3D3D3 solid;
+	margin:20px 600px 0px 150px;
+	border: 1px #dddddd solid;
 	padding:20px 20px 20px 20px;
-	background-color:white;
+	background-color:#ffffff;
+	width:650px;
+	font-family:Arial, 'Helvetica Neue';
+	font-color:#777777;
+	line-height:2;
 }
+
 .site-footer {
 	position:absolute;
 	right:0;
@@ -29,39 +57,39 @@
 	background-color:#666666;
 	text-align:center;
 	height:5%;
-	
+	border-top:10px #4aaaa5 solid;
+	font-family:Arial, 'Helvetica Neue';
+	font-color:#777777;	
 }
 
-hr {
-	position:absolute;
-	top:140px;
-	width:100%;
-}
-
-ol {
+li {
 	float:right;
 	width:5%;
-	padding:30px;
+	padding:0px 0px 0px 0px;
 	background-color:transparent;
-	border-right:1px solid #D3D3D3;
+	border-right:1px solid #777777;
+	border-right-height:1px;
+	border-right-color:lightgray;
+	text-align:center;
 	list-style-type:none;
 	font-family:Arial;
-	color:#D3D3D3;
-	position:fixed;
+	color:#777777;
+	/*position:fixed;
 	right:300px;
-	top:0px;
-	display:inline;
-
+	top:0px;*/
+	position:relative;
+	left:-250px;
+	top:-50px;
 }
 
 .connect {
 	float:right;
 	width:270px;
-	height:100px;
-	border:1px solid #D3D3D3;
+	height:200px;
+	border:1px solid lightgray;
 	padding:10px 10px 10px 10px;
 	position:absolute;
-	top:163px;
+	top:148px;
 	right:100px;
 	bottom:100px;
 	left:920px;
@@ -69,7 +97,21 @@ ol {
 	text-align:center;
 }
 
+body {
+	background:url(../images/seigaiha.png);
+}
 
-.background {
-	background:url("assets/images/seigaiha.png")pink;
+.main-content {
+	width:960px;
+}
+
+.icons {
+	display:inline;
+	height:80px;
+	width:80px;
+}
+
+#picture {
+	float:left;
+	padding:10px 10px 10px 10px;
 }
