--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,117 +1,289 @@
-#header {
-	background-color:#4aaaa5;
-	color:#F5F5F5;
-	font-family:'Georgia', Times, 'Times New Roman', serif;
+html {
 	position:relative;
-	left:10%;
-	top:3%;
-	height:65px;
-	width:250px;
-	padding:40px 10px 10px 40px;
-	clear:left;
-	margin-bottom:0px;
-}
-
-header {
-	border-bottom:3px solid lightgray;
-	border-bottom:100%;
-	margin-bottom:0px;
-}
-
-h1 {
-	font-family:'Georgia', Times, 'Times New Roman', serif;
-	color:#4aaaa5;
-	border-bottom:3px solid lightgray;
-	border-bottom:100%;
-	margin:0px 0px 0px 0px;
-}
-
-h2 {
-	font-family:'Georgia';
-	color:#4aaaa5;
-	border-bottom:3px solid lightgray;
-	border-bottom:100%;
-	padding:5px;
-}
-
-.clearfix {
-	float:left;
-	overflow:auto;
-	clear:left;
-	margin:20px 600px 0px 150px;
-	border: 1px #dddddd solid;
-	padding:20px 20px 20px 20px;
-	background-color:#ffffff;
-	width:650px;
-	font-family:Arial, 'Helvetica Neue';
-	font-color:#777777;
-	line-height:2;
-}
-
-.site-footer {
-	position:absolute;
-	right:0;
-	bottom:0;
-	left:0;
-	padding-top:15px;
-	background-color:#666666;
-	text-align:center;
-	height:5%;
-	border-top:10px #4aaaa5 solid;
-	font-family:Arial, 'Helvetica Neue';
-	font-color:#777777;	
-}
-
-li {
-	float:right;
-	width:5%;
-	padding:0px 0px 0px 0px;
-	background-color:transparent;
-	border-right:1px solid #777777;
-	border-right-height:1px;
-	border-right-color:lightgray;
-	text-align:center;
-	list-style-type:none;
-	font-family:Arial;
-	color:#777777;
-	/*position:fixed;
-	right:300px;
-	top:0px;*/
-	position:relative;
-	left:-250px;
-	top:-50px;
-}
-
-.connect {
-	float:right;
-	width:270px;
-	height:200px;
-	border:1px solid lightgray;
-	padding:10px 10px 10px 10px;
-	position:absolute;
-	top:148px;
-	right:100px;
-	bottom:100px;
-	left:920px;
-	background-color:white;
-	text-align:center;
+	min-height:100%;
 }
 
 body {
 	background:url(../images/seigaiha.png);
+	margin:0 0 100px;
+}
+
+#header {
+	height:100px;
+	background-color:white;
+	border-bottom:2px solid #cccccc;
+	position:absolute;
+	left:0;
+	top:0;
+	right:0;
+}
+
+#myName {
+	color:#ffffff;
+	font-family:'Georgia', Times, 'Times New Roman';
+	background-color:#4aaaa5;
+	position:relative;
+	left:200px;
+	top:0px;
+	width:300px;
+	height:50px;
+	text-align:center;
+	padding:10px 10px 20px 10px;
+}
+
+.nav {
+	float:right;
+	padding:0px 0px 0px 0px;
+	font-family:'Arial', 'Helvetica Neue';
+	position:relative;
+	right:360px;
+	top:-70px;
+	list-style-type:inline-block;
+}
+
+a {
+	text-decoration:none;
+	color:#777777;
 }
 
 .main-content {
-	width:960px;
+	background-color:white;
+	border:1px solid #dddddd;
+	width:630px;
+	height:490px;
+	float:left;
+	position:absolute;
+	left:200px;
+	top:150px;
+	padding-left:10px;
+	padding-right:10px;
 }
 
-.icons {
-	display:inline;
-	height:80px;
-	width:80px;
+.main-content-contact {
+	background-color:white;
+	border:1px solid #dddddd;
+	width:610px;
+	height:550px;
+	float:left;
+	position:absolute;
+	left:200px;
+	top:150px;
+	padding-left:30px;
+	padding-right:10px;
+}
+
+.clearfix {
+	overflow:auto;
+}
+
+.main-content-portfolio {
+	background-color:white;
+	border:1px solid #dddddd;
+	width:630px;
+	height:800px;
+	float:left;
+	position:absolute;
+	left:200px;
+	top:150px;
+	padding-left:10px;
+	padding-right:10px;
+}
+
+.projects {
+	float:left;
+	height:170px;
+	width:220px;
+	padding:10px 30px 10px 30px;
+}
+
+#hangman {
+	background-color:#4aaaa5;
+	color:#ffffff;
+	position:absolute;
+	left:40px;
+	top:230px;
+	width:200px;
+	text-align:center;
+	padding:10px 10px 10px 10px;
+	font-family:'Georgia', Times, 'Times New Roman';
+	font-size:20px;
+}
+#rpgGame {
+	background-color:#4aaaa5;
+	color:#ffffff;
+	position:absolute;
+	left:320px;
+	top:230px;
+	width:200px;
+	text-align:center;
+	padding:10px 10px 10px 10px;
+	font-family:'Georgia', Times, 'Times New Roman';
+	font-size:20px;
+}
+
+#triviaGame {
+	background-color:#4aaaa5;
+	color:#ffffff;
+	position:absolute;
+	left:40px;
+	top:420px;
+	width:200px;
+	text-align:center;
+	padding:10px 10px 10px 10px;
+	font-family:'Georgia', Times, 'Times New Roman';
+	font-size:20px;
+}
+
+#basketball {
+	background-color:#4aaaa5;
+	color:#ffffff;
+	position:absolute;
+	left:40px;
+	top:580px;
+	width:200px;
+	text-align:center;
+	padding:10px 10px 10px 10px;
+	font-family:'Georgia', Times, 'Times New Roman';
+	font-size:20px;
+}
+
+#rockPaper {
+	background-color:#4aaaa5;
+	color:#ffffff;
+	position:absolute;
+	left:320px;
+	top:420px;
+	width:200px;
+	text-align:center;
+	padding:10px 10px 10px 10px;
+	font-family:'Georgia', Times, 'Times New Roman';
+	font-size:20px;
+}
+
+#contactHeader {
+	color:#4aaaa5;
+	font-family:'Georgia', Times, 'Times New Roman';
+	border-bottom:3px solid #dddddd;
+	padding-left:10px;
+	padding-bottom:10px;
+}
+
+#aboutMe {
+	color:#4aaaa5;
+	font-family:'Georgia', Times, 'Times New Roman';
+	border-bottom:3px solid #dddddd;
+	padding-left:20px;
+	padding-bottom:20px;
 }
 
 #picture {
 	float:left;
 	padding:10px 10px 10px 10px;
+	height:200px;
+	width:150px;
+}
+
+#portfolioHeading {
+	color:#4aaaa5;
+	font-family:'Georgia', Times, 'Times New Roman';
+	border-bottom:3px solid #dddddd;
+	padding-left:20px;
+	padding-bottom:20px;
+}
+
+.bio {
+	font-family:'Arial', 'Helvetica Neue';
+	color:#777777;
+	padding-left:20px;
+	line-height:2;
+}
+
+.response {
+	font-family:'Arial', 'Helvetica Neue';
+	color:#777777;
+	clear:both;
+	padding:0px 0px 0px 0px;
+	margin:0px 0px 0px 0px;
+}
+
+textarea {
+	width:550px;
+	height:16px;
+	font-family:'Arial', 'Helvetica Neue';
+	padding:5px;
+	margin:0px;
+}
+
+#messageBox {
+	width:550px;
+	height:150px;
+}
+
+#submit {
+	background-color:#4aaaa5;
+	color:#ffffff;
+	border:none;
+	font-size:16px;
+	margin:0px 0px 0px 0px
+	padding:20px 20px 20px 20px;
+	height:30px;
+	width:100px;
+}
+
+.connectBox1 {
+	float:right;
+	width:270px;
+	height:200px;
+	background-color:#ffffff;
+	border:1px solid #dddddd;
+	margin:30px 30px 30px 30px;
+	position:absolute;
+	right:310px;
+	top:120px;
+}
+
+.connectBox2 {
+	float:right;
+	width:270px;
+	height:200px;
+	background-color:#ffffff;
+	border:1px solid #dddddd;
+	margin:30px 30px 30px 30px;
+	position:absolute;
+	right:310px;
+	top:120px;
+}
+
+#connectWithMe {
+	color:#4aaaa5;
+	text-align:center;
+	padding-bottom:10px;
+	border-bottom:3px solid #dddddd;
+	border-padding-left:20px;
+	border-padding-right:20px;
+	font-family:'Georgia', Times, 'Times New Roman';
+}
+
+.icons {
+	height:60px;
+	width:60px;
+	padding-left:20px;
+	padding-top:10px;
+	padding-bottom:10px;
+}
+
+#site-footer {
+	position:absolute;
+	right:0;
+	bottom:0;
+	left:0;
+	height:7%;
+	padding-top:30px;
+	width:100%;
+	background-color:#666666;
+	text-align:center;
+	border-top:10px #4aaaa5 solid;
+	font-family:Arial, 'Helvetica Neue';
+	color:#D6D6D6;
+	width:100%;
 }
