--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,5 @@
-html {
-	position:relative;
-	min-height:100%;
-}
-
 body {
-	background:url(../images/seigaiha.png);
-	margin:0 0 100px;
+	background:url(../images/symphony.png);
 }
 
 #header {
@@ -37,6 +31,16 @@ body {
 	font-family:'Arial', 'Helvetica Neue';
 	position:relative;
 	right:360px;
+	top:-70px;
+	list-style-type:inline-block;
+}
+
+.nav-portfolio {
+	float:right;
+	padding:0px 0px 0px 0px;
+	font-family:'Arial', 'Helvetica Neue';
+	position:relative;
+	right:343px;
 	top:-70px;
 	list-style-type:inline-block;
 }
@@ -254,6 +258,18 @@ textarea {
 	top:120px;
 }
 
+.connectBox3 {
+	float:right;
+	width:270px;
+	height:200px;
+	background-color:#ffffff;
+	border:1px solid #dddddd;
+	margin:30px 30px 30px 30px;
+	position:absolute;
+	right:293px;
+	top:120px;
+}
+
 #connectWithMe {
 	color:#4aaaa5;
 	text-align:center;
@@ -279,7 +295,6 @@ textarea {
 	left:0;
 	height:7%;
 	padding-top:30px;
-	width:100%;
 	background-color:#666666;
 	text-align:center;
 	border-top:10px #4aaaa5 solid;
