--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,11 @@
+html {
+	position:relative;
+	min-height:100%;
+}
+
 body {
 	background:url(../images/symphony.png);
+	margin:0 0 85px 0;
 }
 
 #header {
@@ -167,7 +173,7 @@ a {
 #contactHeader {
 	color:#4aaaa5;
 	font-family:'Georgia', Times, 'Times New Roman';
-	padding-left:10px;
+	padding-left:30px;
 }
 
 #aboutMe {
@@ -275,14 +281,14 @@ textarea {
 
 hr {
 	border:0 none;
-	background-color:#dddddd;
+	background-color:lightgray;
 	height:3px;
 	width:80%;
 }
 
 #line1 {
 	border:0 none;
-	background-color:#dddddd;
+	background-color:lightgray;
 	height:3px;
 	width:90%;
 }
@@ -300,7 +306,7 @@ hr {
 	right:0;
 	bottom:0;
 	left:0;
-	height:7%;
+	height:85px;
 	padding-top:30px;
 	background-color:#666666;
 	text-align:center;
