--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,7 +222,7 @@ button {
 .main-container {
 	max-width:530px;
 	width:100%;
-	margin-left:50px;
+	margin-left:0;
 }
 
 #logo {
@@ -250,6 +250,7 @@ nav {
 	margin-top:5px;
 	max-width:768px;
 	width:100%;
+	margin-left:0;
 
 }
 
@@ -290,6 +291,7 @@ nav a {
 
 .main-container {
 	margin-top:-140px;
+	margin-left:0;
 }
 
 .sidebar {
